@@ -1,3 +1,9 @@
+Sat Aug 09 23:11:03 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/main.cpp:
+	  - Added the #ifdef LOCAL_COMPILE back.
+	  - Moved the QMainWindow initialization before the core init.
+
 Sat Aug 09 23:08:44 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
